--- a/on4d_GLr2/on4d_GLr2.vcxproj.filters
+++ b/on4d_GLr2/on4d_GLr2.vcxproj.filters
@@ -284,6 +284,9 @@
     <ClInclude Include="VRDeviceOperation.h">
       <Filter>c++ source\core演算部</Filter>
     </ClInclude>
+    <ClInclude Include="MyWin32_GLAppUtil.h">
+      <Filter>c++ header\OVR</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="UI_EN.rc">
