--- a/on4d_GLr2/info.rc
+++ b/on4d_GLr2/info.rc
@@ -3,13 +3,13 @@
 
 INFO_DLG DIALOGEX 25, 25, 175, 80
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "ÉoÅ[ÉWÉáÉìèÓïÒ"
+CAPTION "Version infomation"
 FONT 9, "MS Shell Dlg", 400, 0, 0x1
 
 BEGIN
 	LTEXT "NES-FS \
-			(Non Euclidean Space Flight Simulator) v.3.0.0\
-			\n\nRelease: 2021.01\
+			(Non Euclidean Space Flight Simulator) v.3.1.0\
+			\n\nRelease: 2021.03\
 			\nMade by: bruefire\
 			\nLicense: Open Source Software",
 			-1, 8, 15, 105, 55
