reactivate the menu item for object random locating.

--- a/on4d_GLr2/UIH3.rc
+++ b/on4d_GLr2/UIH3.rc
@@ -100,7 +100,7 @@ END
 END
 POPUP "射撃オブジェクト配置"
 BEGIN
-//MENUITEM "ランダム配置(集中)", UI_THROW_RANDOM
+MENUITEM "ランダム配置(集中)", UI_THROW_RANDOM
 MENUITEM "ランダム配置(一様)", UI_THROW_RANDOM2
 MENUITEM "クリア", UI_THROW_CLEAR
 END
