--- a/on4d_GLr2/UIH3.rc
+++ b/on4d_GLr2/UIH3.rc
@@ -19,6 +19,7 @@ MENUITEM "双曲面 (日本語)"	    UI_H3_JA
 MENUITEM "Spherical (English)"	UI_LANG_EN
 MENUITEM "Hyperbolic (English)"	UI_H3_EN
 MENUITEM "Spherical VR"	        UI_S3_VR
+MENUITEM "Hyperbolic VR"	    UI_H3_VR
 END
 MENUITEM "スクリプト実行", UI_CALL_SCRIPT
 MENUITEM SEPARATOR
