add processing to draw distances between player and a object.

--- a/on4d_GLr2/UIH3EN.rc
+++ b/on4d_GLr2/UIH3EN.rc
@@ -96,7 +96,7 @@ BEGIN
 		MENUITEM "Player object", UI_PLR
 		MENUITEM "Map", UI_MAP
 		//MENUITEM "ˆÚ“®/‰ñ“]•ûŒü", UI_LR_RESULT
-		//MENUITEM "‹——£", UI_DST
+		MENUITEM "Distance", UI_DST
 		//MENUITEM "‹OÕ", UI_PAST
 	END
 	POPUP "Help"
