--- a/on4d_GLr2/UIH3.rc
+++ b/on4d_GLr2/UIH3.rc
@@ -118,7 +118,7 @@ MENUITEM "座標", UI_XYZ
 MENUITEM "操作オブジェクト", UI_PLR
 MENUITEM "マップ", UI_MAP
 //MENUITEM "移動/回転方向", UI_LR_RESULT
-//MENUITEM "距離", UI_DST
+MENUITEM "距離", UI_DST
 //MENUITEM "軌跡", UI_PAST
 END
 POPUP "ヘルプ"
