add processings to load a object by lazy loading and save the size of a symmetric object.

--- a/on4d_GLr2/UIH3.rc
+++ b/on4d_GLr2/UIH3.rc
@@ -79,8 +79,9 @@ MENUITEM "直線6つ(点線)", UI_6_POINT
 MENUITEM "直線6つ(線)", UI_6_LINE
 MENUITEM "極座標(点)", UI_TUDE_POINT
 MENUITEM "極座標(線)", UI_TUDE_LINE
-//MENUITEM "120胞体(点)"			 UI_120C_POINT
-//MENUITEM "120胞体(線)"			 UI_120C_LINE
+MENUITEM "12面体ハニカム(点)"			 UI_Dodeca_POINT
+MENUITEM "12面体ハニカム(線)"			 UI_Dodeca_LINE
+MENUITEM "12面体ハニカム(面)"			 UI_Dodeca_SURFACE
 //MENUITEM "120胞体(柱)"			 UI_120C_SURFACE
 MENUITEM "トーラス(点)", UI_TORUS_POINT
 MENUITEM "トーラス(線)", UI_TORUS_LINE
