--- a/on4d_GLr2/on4d_GLr2.vcxproj.filters
+++ b/on4d_GLr2/on4d_GLr2.vcxproj.filters
@@ -133,6 +133,9 @@
     <None Include="shader/pxlLowPt.c">
       <Filter>resource files\GL部\GLSLシェーダ</Filter>
     </None>
+    <None Include="pyInit.py">
+      <Filter>resource files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rcFunc.cpp">
@@ -347,6 +350,5 @@
     <Text Include="pyUpd.py">
       <Filter>resource files</Filter>
     </Text>
-    <Text Include="shader/pyInit.py" />
   </ItemGroup>
 </Project>
