changed processing to draw a H3 object tracking line. the lines is drawn as dotted lines.

--- a/on4d_GLr2/UIH3.rc
+++ b/on4d_GLr2/UIH3.rc
@@ -120,7 +120,7 @@ MENUITEM "操作オブジェクト", UI_PLR
 MENUITEM "マップ", UI_MAP
 //MENUITEM "移動/回転方向", UI_LR_RESULT
 MENUITEM "距離", UI_DST
-//MENUITEM "軌跡", UI_PAST
+MENUITEM "軌跡", UI_PAST
 END
 POPUP "ヘルプ"
 BEGIN
