--- a/on4d_GLr2/UI_EN.rc
+++ b/on4d_GLr2/UI_EN.rc
@@ -116,7 +116,7 @@ BEGIN
         MENUITEM "Map",               UI_MAP
         MENUITEM "Loc/Rot",                UI_LR_RESULT
         MENUITEM "Distance",                UI_DST
-        MENUITEM "Track",                UI_PAST
+        MENUITEM "Tracing line",                UI_PAST
     END
     POPUP "Help"
     BEGIN
