--- a/on4d_GLr2/on4d_GLr2.vcxproj.filters
+++ b/on4d_GLr2/on4d_GLr2.vcxproj.filters
@@ -302,6 +302,9 @@
     <ClInclude Include="..\lib\OVR\LibOVRKernel\Src\GL\CAPI_GLE_GL.h">
       <Filter>c++ header\OVR</Filter>
     </ClInclude>
+    <ClInclude Include="AreaCellH3.h">
+      <Filter>c++ header\core演算部</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="UI_EN.rc">
