added the processing for changing the player location.

--- a/on4d_GLr2/on4d_GLr2.vcxproj
+++ b/on4d_GLr2/on4d_GLr2.vcxproj
@@ -26,6 +26,7 @@
       <FileType>Text</FileType>
     </ResourceCompile>
     <None Include="shader/geo.c" />
+    <ResourceCompile Include="chgPlayerLocH3.rc" />
     <ResourceCompile Include="editor.rc" />
     <ResourceCompile Include="howTo.rc" />
     <ResourceCompile Include="info.rc">
