--- a/on4d_GLr2/UIH3.rc
+++ b/on4d_GLr2/UIH3.rc
@@ -68,8 +68,7 @@ END
 END
 POPUP "オブジェクト"
 BEGIN
-MENUITEM "オブジェクトループ"	UI_OBJ_LOOP
-//MENUITEM "プレイヤー位置変更"			UI_CALL_MODLG
+MENUITEM "プレイヤー位置変更"			UI_CALL_MODLG
 POPUP "オブジェクト変更"
 BEGIN
 POPUP "ベースオブジェクト"
