added the processing for showing an absolute h3 polar coordinate.

--- a/on4d_GLr2/UIH3.rc
+++ b/on4d_GLr2/UIH3.rc
@@ -33,11 +33,11 @@ BEGIN
 MENUITEM "白", UI_BG_WH
 MENUITEM "黒", UI_BG_BK
 END
-//POPUP "表示座標"
-//BEGIN
-//MENUITEM "極座標", UI_LOC_TUDE
-//MENUITEM "直行座標", UI_LOC_EUC
-//END
+POPUP "表示座標"
+BEGIN
+MENUITEM "極座標", UI_LOC_TUDE
+MENUITEM "上半空間", UI_LOC_EUC
+END
 POPUP "空間スケール"
 BEGIN
 MENUITEM "20", UI_RDS_SS
